--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
     
 
   <header>
-    <div class="pb3-m pb6-l bg-black">
+    <div class="pb3-m pb6-l bg-red">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="/hugo-website" class="f3 fw2 hover-white no-underline white-90 dib">
@@ -138,7 +138,7 @@
 </article>
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-red bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/hugo-website" >
     &copy;  resumesite 2020 
