--- a/contact/index.html
+++ b/contact/index.html
@@ -157,7 +157,7 @@
   </div>
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-red bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="/hugo-website" >
     &copy;  resumesite 2020 
